# s2-hask

./: CHANGELOG.md  README.md  s2-geometry.cabal  s2-hask.cabal
S2/: S2CellId.hs  S2Point.hs
src/Geometry/S2/: S1Angle.hs  S2CellId.hs  S2EdgeCrossings.hs  S2LatLng.hs  S2Loop.hs  S2Point.hs  S2Predicates.hs  Util.hs
src/Geometry/S2/Testing/: S2Generators.hs
src/S2/: S1Angle.hs  S2CellId.hs  S2LatLng.hs
test/: TestMain.hs
test/Geometry/S2/: S1AngleTest.hs  S2CellIdTest.hs  S2Generators.hs  S2LatLngTest.hs  S2LoopTest.hs  S2PointTest.hs  S2PredicatesTest.hs
tests/: Main.hs
tests/Geometry/S2/: S1AngleTest.hs  S2LatLngTest.hs  S2LoopTest.hs  S2PointTest.hs
tests/S2/: Main.hs  S1AngleTest.hs  S2CellIdTest.hs  S2LatLngTest.hs  S2PointTest.hs
