cabal-version:      2.4
name:               s2-geometry
version:            0.1.0.0

synopsis: Haskell implementation of http://s2geometry.io/

description:
  S2 is a spherical geometry library providing geometry primitives for describing points, lines, and
  shapes on a sphere with powerful support for geometric constructions/queries (e.g., union,
  intersection, containment) and spatial indexing.

author:             Michael Qian
maintainer:         michaelq94@gmail.com

library
  exposed-modules: Geometry.S2.S1Angle, Geometry.S2.S2CellId, Geometry.S2.S2LatLng, Geometry.S2.S2Point
  hs-source-dirs: ., src
  other-modules: Geometry.S2.Util
  build-depends: base, vector-space
  default-language: Haskell2010

test-suite s2-geometry-test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  other-modules: Geometry.S2.S1AngleTest, Geometry.S2.S2CellIdTest, Geometry.S2.S2LatLngTest, Geometry.S2.S2PointTest
  build-depends: HTF, base, s2-geometry
  build-tool-depends: HTF:htfpp
  default-language: Haskell2010