cabal-version:      2.4
name:               s2-hask
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             hoisinberg
maintainer:         michaelq94@gmail.com

library s2-geometry
  exposed-modules: S2.S1Angle, S2.S2CellId, S2.S2LatLng, S2.S2Point
  hs-source-dirs: ., S2
  build-depends: base, vector-space
  default-language: Haskell2010

test-suite s2-hask-test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: tests/S2
  other-modules: S1AngleTest, S2CellIdTest, S2LatLngTest, S2PointTest
  build-depends: HTF, base, s2-geometry
  build-tool-depends: HTF:htfpp
  default-language: Haskell2010