cabal-version:      2.4
name:               s2-hask
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             hoisinberg
maintainer:         michaelq94@gmail.com

library s2-geometry
  exposed-modules: Geometry.S2.S1Angle, Geometry.S2.S2CellId, Geometry.S2.S2LatLng, Geometry.S2.S2Point
  hs-source-dirs: ., src
  build-depends: base, vector-space
  default-language: Haskell2010

test-suite s2-geometry-test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  other-modules: Geometry.S2.S1AngleTest, Geometry.S2.S2CellIdTest, Geometry.S2.S2LatLngTest, Geometry.S2.S2PointTest
  build-depends: HTF, base, s2-geometry
  build-tool-depends: HTF:htfpp
  default-language: Haskell2010